@startuml

class WebhookUnknown extends Exception {}
class RSSFluxUnknown extends Exception {}

class Webhook {
- url: string
+ Webhook(url: string)
+ send(data: string)
}

class RSSFlux {
- {static} feeder: RssFeedEmitter
- url: string
- eventName: string
+ RSSFlux(url: string, refreshTime: int = 2000)
+ onUpdate(callback: function)
+ removeOnUpdate(callback: function)
}

class RSSHandler {
+ RSSHandler()
+ pair(flux: RSSFlux, webhook: Webhook)
+ unpair(flux: RSSFlux, webhook: Webhook)
+ unpairAllFromFlux(flux: RSSFlux)
+ unpairAllFromWebhook(flux: Webhook)
+ unpairAll()
}

RSSFlux o-- RSSHandler
Webhook o-- RSSHandler

RSSHandler --> WebhookUnknown : throw
RSSHandler --> RSSFluxUnknown : throw

note left of RSSFlux::RSSFlux
...
feeder.add({
  url: this.url,
  refresh: refreshTime,
  eventName: this.eventName
});
...
end note

note left of RSSFlux::onUpdate
onUpdate(f: function) {
  f(data)
}
end note

note left of RSSHandler::pair
unpair(flux: RSSFlux, webhook: Webhook) {
  ...
  function f(data) {}
  flux.onUpdate(f)
  ...
}
end note

note left of RSSHandler::unpair
unpair(flux: RSSFlux, webhook: Webhook) {
  ...
  function f(data) {
     webhook.send(data)
  }
  flux.onUpdate(f)
  ...
}
end note


@enduml